BasicService 기능 보완